Fixed dark mode stylin of cards

--- a/src/styles/Footer.sass
+++ b/src/styles/Footer.sass
@@ -6,7 +6,7 @@ footer
   flex-direction: row
   width: 100%
   height: 5%
-  color: $text-normal
+  color: $header
   .container
     width: 80%
     display: flex
@@ -18,4 +18,4 @@ footer
       justify-content: center
       li
         padding: 0 .5rem
-        cursor: pointe
+        cursor: pointer
