--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -17,7 +17,11 @@ body
   transition: background.5s ease-out
   &.dark
     $main-bg: #1e1e20
+    $text-normal: hsla(0,0%,100%,0.88)
     background: $main-bg
+    color: $text-normal
+    .movie-card
+      background: $nav-bg
 
   .wrapper
     width: 100%
